karnc/tests/fixtures/positive/78_orders_payment_skeleton/src/commerce/payment.karn
context commerce.payment {
  uses commerce.money

  exports opaque      { AuthId }
  exports transparent { PaymentError }

  type AuthId       = String where Matches("AUTH-[0-9]+")
  type PaymentError = enum {
    Declined,
    InsufficientFunds,
  }
}
