karnc/tests/fixtures/negative/59_unexported_type_access/src/commerce/payment.karn
context commerce.payment {
  exports transparent { PaymentError }

  type PaymentError = enum { Declined }

  -- PrivateRecord is NOT exported.
  type PrivateRecord = {
    note: String,
  }
}
